2000-11-01  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/mercury: Removed the comics just moved to kingfeatures.
	* lib/kingfeatures: Moved Mary Worth, Rex Morgan, Bobos Progress,
	and Hi & Louis to kingfeatures because of the required password
	for mercury (Thanks to Sven Hartge).

	* lib/unitedmedia: Updated to match new duplicated code in
	comiczone.
	* lib/comiczone: Updated so that duplicated code between uexpress
	and unitedmedia is the same.
	* lib/uexpress: Reenabled now that the United Syndicate comics are
	no longered carried by comiczone.

2000-10-31  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Makefile (MODULES): Added spaz_labs and removed dilbert.
	* lib/comiczone: Removed all Universal Syndicate comics because
	comiczone no longer carries them.
	(comiczone): updated so the code would be almost
	exactly the same as unitedmedia's.
	* lib/creators_syndicate: Removed Liberty Meadows from here
	because it is in comiczone.
	* lib/unitedmedia: Changed the days behind to 0.
	(dilbert): Moved dilbert into unitedmedia because color weekday
	comics are no longer offered.

2000-10-30  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/spaz_labs: Added Spaz Labs (contributed by Benjamin Cordes).
	* lib/unitedmedia: [bug 119738] Accommodated for the site's update.
	Removed Eek & Meek.  Made the comics not be a week behind anymore.
	
2000-10-24  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/triangle_robert: initial version (requested by Owen Cameron)

2000-10-10  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/elf_life: Updated to handle website change to use jpg
	(thanks to Max Zomborszki)

2000-09-17  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/cartoonweb: Fixed starts of archives.

2000-09-10  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/cartoonweb (cartoon_web): Moved "Views of the World" from
	worldview into here.  Renamed Cartoon Web to "World View of the