@@ -1,5 +1,9 @@
 2000-11-01  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>
 
+	* Makefile (MODULES): Added Farcus, Greystone Inn, Living in
+	Greytown, and Wandering Ones (thanks to Shawn Oakey).  Added
+	Cool Cat Studio (thanks to Ben Cordes).
+
 	* lib/mercury: Removed the comics just moved to kingfeatures.
 	* lib/kingfeatures: Moved Mary Worth, Rex Morgan, Bobos Progress,
 	and Hi & Louis to kingfeatures because of the required password
